--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 		<url-pattern>/mniterp</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>wel.html</welcome-file>
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>SystemServiceServlet</servlet-name>
@@ -28,7 +28,7 @@
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>Serve</servlet-name>
-		<servlet-class>servlet.ServeServlet</servlet-class>
+		<servlet-class>servlets.ServeServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Serve</servlet-name>
@@ -36,7 +36,7 @@
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>Upload</servlet-name>
-		<servlet-class>servlet.UploadServlet</servlet-class>
+		<servlet-class>servlets.UploadServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Upload</servlet-name>
